Reducing fontawesome import

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
-	
+
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css"/>
 	<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css"/>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+	<link rel="stylesheet" type="text/css" href="./css/icons-fontawesome.css"/>
 
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/brands.min.css" integrity="sha512-D0B6cFS+efdzUE/4wh5XF5599DtW7Q1bZOjAYGBfC0Lg9WjcrqPXZto020btDyrlDUrfYKsmzFvgf/9AB8J0Jw==" crossorigin="anonymous" />
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css" integrity="sha512-SazV6tF6Ko4GxhyIZpKoXiKYndqzh7+cqxl9HDH7DGSpjkCN3QLqTAlhJHJnKxu3/2rfCsltzwFC4CmxZE1hPg==" crossorigin="anonymous" />
 	<title>La chouette agence - Agence web design basée à Lyon</title>
 
 
@@ -279,7 +282,7 @@
 		<!-- Footer - bloc-8 -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc align-items-around" id="bloc-8">
 			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
-				<span class="fa fa-chevron-up">
+				<span class="fas fa-chevron-up">
 
 				</span>
 			</a>
