Add a longer descriptions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="author" content="La chouette agence"/>
-	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web"/>
+	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web. Nous vous accompagnons dans la creation et l'évolution de votre projet web. Nos compétences en design et en référencement, transformeront vos idées en réalité digital."/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
 
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="./css/icons-fontawesome.css"/>
 
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css" type="text/css"/>
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/brands.min.css" integrity="sha512-D0B6cFS+efdzUE/4wh5XF5599DtW7Q1bZOjAYGBfC0Lg9WjcrqPXZto020btDyrlDUrfYKsmzFvgf/9AB8J0Jw==" crossorigin="anonymous" />
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css" integrity="sha512-SazV6tF6Ko4GxhyIZpKoXiKYndqzh7+cqxl9HDH7DGSpjkCN3QLqTAlhJHJnKxu3/2rfCsltzwFC4CmxZE1hPg==" crossorigin="anonymous" />
