--- a/contact_agence_web_design.html
+++ b/contact_agence_web_design.html
@@ -175,12 +175,10 @@
 	</main>
 	<!-- Principal conteneur END -->
 
-	
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/formHandler.js"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="./js/bootstrap.js" async></script>
+	<script src="./js/jqBootstrapValidation.js" async></script>
+	<script src="./js/jquery.touchSwipe.js" async></script>
+	<script src="./js/formHandler.js" async></script>
 </body>
 </html>
